# numba-kdtree

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-python-wheels.yml  build-python-wheels_windows.yml
examples/: example_knn.py
numba_kdtree/: __init__.py  ckdtree.py  ckdtree_ctypes.py  kd_tree.py
src/ckdtree/: README  build.cpp  ckdtree.h  ckdtree_decl.h  distance.h  distance_base.h  init.cpp  partial_sort.h  query.cpp  query_radius.cpp  rectangle.h
tests/: test_kdtree.py  util.py
